--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,3 +26,4 @@ link_directories(${Boost_LIBRARY_DIRS})
 add_executable(test_sfinae test_sfinae.cpp)
 add_executable(ex2_0 ex2_0.cpp)
 add_executable(ex2_1 ex2_1.cpp)
+add_executable(ex2_2 ex2_2.cpp)
